# Eva

./: .env  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Cargo.toml  README.md  eva_auto_fix.patch  eva_auto_loop_stderr.txt  eva_auto_loop_stdout.txt  eva_memory.sqlite3  safety.yaml
.ci/: spec_hash
.eva/: system.db
.github/workflows/: autofix_on_failure.yml  ci.yml  status.yml
ARCHITECTURE/: ARCHITECTURE_RULES.md  ARCHITECTURE_SPEC.md  ARCHITECTURE_TREE.md  ARCHITECTURE_TREE_CANONICAL.md  ARCHITECTURE_legacy.md  AUTO_FIX.md  AUTO_USE.md  BLUEPRINT_UPDATE_POLICY.md  CI_PR_AUTOMATION.md  CRITICAL_ISSUES_STATUS.md  D6-1.md  D6-2.md  D7-D9_MILESTONES.md  MEMORY_COMPONENTS.md  MEMORY_IMPLEMENTATION_PLAN.md  MEMORY_INJECTION_AND_CONFLICT.md  MEMORY_VALUE_AND_COST.md  PROGRESS_CHECKLIST.md  README.md  SELF_STABLE_DESIGN.md
ARCHITECTURE/ARCHIVE/: ARCHITECTURE_TREE_DESIGN_HISTORY.md  ARCHITECTURE_TREE_DESIGN_HISTORY_RAW.md
backup/: EVA 系統未來開發總原則.txt  Eva結構圖.txt  README.md  completed_tasks_list.txt  development_log.txt  external_api.md  main.rs 完整內容總覽.txt  voices.txt  互動小說說明書.md  工作日誌.txt  總計畫.txt  設計文檔.txt  開發日志.txt  風險專案_README.md  風險矩陣索引系統.md
crates/eva-core/: Cargo.toml  intent_schema.json
crates/eva-core/src/: executor.rs  fuse.rs  intent_listener.rs  lib.rs  memory.rs  memory_vector.rs  plan_executor.rs  task_planner.rs
crates/eva-core/src/listener/: ws.rs
crates/eva-knowledge-base/: Cargo.toml
crates/eva-knowledge-base/src/: lib.rs
crates/eva-ops/: Cargo.toml
crates/eva-ops/src/: lib.rs
crates/eva-system-core/: Cargo.toml  rust_warnings_and_test_output.txt  test_output.txt
crates/eva-system-core/src/: db.rs  lib.rs  query.rs  scanner.rs  schema.rs
crates/eva-system-core/tests/: core_tests.rs
crates/eva-tools/: Cargo.toml  cargo_check_output.txt  knowledge_base.db  test_safety_config.rs
crates/eva-tools/knowledge_base/: error_log.md
crates/eva-tools/src/: api_server.rs  apply_patch.rs  auto_generate.rs  auto_loop_executor.rs  check_structure.rs  combat.rs  error_recovery.rs  fine_tune.rs  lib.rs  llm_intent_plan.rs  main.rs  module_generator.rs  patch_safety.rs  prompt_adapter.rs  revert.rs  safety_config.rs  test_target.rs  tts_adapter.rs  tui_dashboard.rs
crates/eva-tools/src/tools/: file_guard.rs
crates/eva-tools/tests/: combat_integration.rs  fine_tune_integration.rs  tts_adapter_integration.rs
crates/llama_cpp_rs/: Cargo.toml  build.rs
crates/task_planner/: Cargo.toml
crates/task_planner/src/: lib.rs
crates/task_planner/tests/: plan_test.rs
docs/: MEMORY_PRIVACY_GUIDE.md  OPS_MONITORING_GUIDE.md  external_api.md
docs/rfc/: 2025-05-message-bus.md  README.md
eva/: Cargo.toml
knowledge_base/: error_log.md
services/: module_generator.rs  prompt_adapter.rs
src/: api_server.rs  auto_scheduler.rs  boredom_detector.rs  lib.rs  main.rs  scene_scoring.rs  sum.rs
src/app/: assistant.rs  interactive_novel.rs  mod.rs  mode_manifest.rs  mode_manifest.rs.bak  mode_router.rs  self_inspect_menu.rs  settings.rs
src/infrastructure/: llm_router.rs  local_llm_adapter.rs  local_llm_native_adapter.rs  mod.rs  openai_client.rs
src/services/: memory_store.rs  memory_store_sqlite.rs  mod.rs  prompt_adapter.rs
src/tools/: auto_loop_executor.rs  error_recovery.rs  memory_cli.rs  mod.rs  tui_dashboard.rs
src/ui/: ai_assistant_widget.rs  main_menu.rs  mod.rs  self_upgrade_menu.rs
src/utils/: context_builder.rs  feedback.rs
tests/: ws_smoke.rs
tools/: check_structure.rs
ui/: self_upgrade_menu.rs
xtask/: Cargo.toml
xtask/src/: main.rs  spec_hash.rs  status.rs
