[package]
name = "eva-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
futures-util = "0.3"
tracing = "0.1"
hyper = "1"
eva-ops = { path = "../eva-ops" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
once_cell = "1.19"
uuid = { version = "1", features = ["v4"] }
jsonschema = "0.17"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "sqlite", "chrono"] }
rand = "0.8"
bincode = "1.3"
blake3 = "1.5"

[dev-dependencies]
tokio-tungstenite = "0.23"
