[package]
name = "eva-ops"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
tracing = "0.1"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
prometheus = "0.13"
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

