[package]
name = "eva-tools"
version = "0.3.0"
edition = "2024"

[dependencies]
notify = "4.0"
tokio-cron-scheduler = "0.9"

eva-knowledge-base = { path = "../eva-knowledge-base" }
regex = "1.11.1"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["alloc"] }
anyhow = "*"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
